tests/fail/parse/error-recovery.snap
stdout = ''
stderr = '''
error: unexpected token ;
  ┌─ tests/fail/parse/error-recovery.fathom:3:17
  │
3 │ let x : Type = {;
  │                 ^ unexpected token
  │
  = expected "let", "name" or "}"

error: mismatched types
  ┌─ tests/fail/parse/error-recovery.fathom:5:1
  │
5 │ x : Type -> Type
  │ ^ type mismatch, expected `Type -> Type`, found `Type`
  │
  = expected `Type -> Type`
       found `Type`

'''
